# financial-risk-engine

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.toml
src/risk_engine/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py
tests/: test_cli.py  test_config.py  test_logging_config.py
