[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "financial-risk-engine"
version = "0.1.0"
description = "Portfolio analytics, simulation, and financial risk modelling in Python."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Oliver" },
]
keywords = [
    "finance",
    "financial-risk",
    "portfolio-analysis",
    "portfolio-optimization",
    "monte-carlo",
    "value-at-risk",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.3",
    "mypy>=2.0",
    "pre-commit>=4.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]

[project.scripts]
risk-engine = "risk_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=risk_engine",
    "--cov-report=term-missing",
]
filterwarnings = [
    "error",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src/risk_engine"]
warn_unused_configs = true
